App/Styles: fix background issue for scrollable panels on small screens

--- a/assets/app/src/styles/panels.scss
+++ b/assets/app/src/styles/panels.scss
@@ -129,6 +129,7 @@
 @media screen and (max-width: 400px) {
 	#panels {
 		padding: 0px;
+		background: var(--background-primary);
 
 		.panel-wrapper {
 			width: 100%;
